# united

./: .ghci  CHANGES.md  README.md  hie.yaml  stack.yaml  united.cabal
.github/workflows/: ci.yml
examples/: Build.hs  Function.hs  Lattice.hs  MaxPlus.hs  Sketch.hs  These.hs
paper/: .gitignore  main.tex  programming.cls  refs.bib
src/Control/: Batch.hs  Match.hs
src/Data/Example/: Lattice.hs
src/Data/Functor/: United.hs
src/Data/Monoid/: United.hs
src/Data/Monoid/United/: Language.hs
src/Data/Monoid/United/Language/: Let.hs
test/: Main.hs
