name:          united
version:       0.0.1
synopsis:      United monoids
license:       MIT
license-file:  LICENSE
author:        Andrey Mokhov <andrey.mokhov@gmail.com>, github: @snowleopard
maintainer:    Andrey Mokhov <andrey.mokhov@gmail.com>, github: @snowleopard
copyright:     Andrey Mokhov, 2018
homepage:      https://github.com/snowleopard/united
category:      Algebra
build-type:    Simple
cabal-version: >=1.18
tested-with:   GHC==8.4.4
stability:     experimental
description:   United monoids

extra-doc-files:
    README.md

source-repository head
    type:     git
    location: https://github.com/snowleopard/united.git

library
    hs-source-dirs:     src
    exposed-modules:    Data.Monoid.United
    build-depends:      algebraic-graphs,
                        base        >= 4.7     && < 5,
                        containers  >= 0.5.5.1 && < 0.8
    default-language:   Haskell2010
    GHC-options:        -Wall
                        -fno-warn-name-shadowing
                        -fspec-constr
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wredundant-constraints
