name:          united
version:       0.0.1
synopsis:      United monoids
license:       MIT
license-file:  LICENSE
author:        Andrey Mokhov <andrey.mokhov@gmail.com>, github: @snowleopard
maintainer:    Andrey Mokhov <andrey.mokhov@gmail.com>, github: @snowleopard
copyright:     Andrey Mokhov, 2018-2021
homepage:      https://github.com/snowleopard/united
bug-reports:   https://github.com/snowleopard/united/issues
category:      Algebra
build-type:    Simple
cabal-version: 1.18
tested-with:   GHC==9.2, GHC==9.0, GHC==8.10
description:   Experiments with united monoids

extra-doc-files:
    CHANGES.md
    README.md

source-repository head
    type:     git
    location: https://github.com/snowleopard/united.git

library
    hs-source-dirs:     src
    exposed-modules:    Control.Batch
                        Control.Match
                        Data.Monoid.United
                        Data.Monoid.United.Language
    build-depends:      algebraic-graphs,
                        array       >= 0.4     && < 0.6,
                        base        >= 4.7     && < 5,
                        containers  >= 0.5.5.1 && < 0.8
    default-language:   Haskell2010
    ghc-options:        -Wall
                        -fno-warn-name-shadowing
                        -fspec-constr
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wredundant-constraints

test-suite test
    hs-source-dirs:     examples, test
    other-modules:      Build,
                        Lattice,
                        MaxPlus,
                        Sketch,
                        These
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    build-depends:      algebraic-graphs,
                        array       >= 0.4     && < 0.6,
                        base        >= 4.7     && < 5,
                        containers  >= 0.5.5.1 && < 0.8,
                        united
    default-language:   Haskell2010
    ghc-options:        -Wall
                        -fno-warn-name-shadowing
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wredundant-constraints
